--- a/index.html
+++ b/index.html
@@ -11,14 +11,56 @@
 </head>
 <body>
     <div id="wrap">
-        <div id="header"></div>
-        <div id="nav"></div>
-        <div id="visual"></div>
-        <div id="contents01"></div>
-        <div id="contents02"></div>
-        <div id="contents03"></div>
-        <div id="contents04"></div>
-        <div id="footer"></div>
+        <div id="header">
+            <div class="top_menu">
+                <div class="top_left">
+                    <a href="/">재능등록</a>
+                    <a href="/">물품등록</a>
+                </div>
+                <div class="top_right">
+                    <a href="/">로그인</a>
+                    <a href="/">회원가입</a>
+                    <a href="/">고객센터</a>
+                    <a href="/">검색</a>
+                </div>
+            </div>
+        </div>
+        <div id="nav">
+            <div class="gnb">
+                <a href="/"><img src="images/lhfriends_logo.png" alt="logo"></a>
+                <div class="menu">
+                    <ul>우리단지</ul>
+                    <ul>공유마켓</ul>
+                    <ul>알뜰쇼핑</ul>
+                    <ul>생활정보</ul>
+                    <ul>LH친구 사용설명서</ul>
+                </div>
+            </div>
+        </div>
+        <div id="visual">
+            <a href="/"><img src="images/visual01.png" alt=""></a>
+        </div>
+        <div id="contents01">
+            <div class="con01">
+                <div class="tit"></div>
+                <div class="notice">
+                    <div class="list"></div>
+                    <div class="info"></div>
+                </div>
+            </div>
+        </div>
+        <div id="contents02">
+            <div class="con02"></div>
+        </div>
+        <div id="contents03">
+            <div class="con03"></div>
+        </div>
+        <div id="contents04">
+            <div class="con04"></div>
+        </div>
+        <div id="footer">
+            <div class="footer_wrap"></div>
+        </div>
     </div>
 </body>
 </html>
