--- a/index.html
+++ b/index.html
@@ -42,15 +42,35 @@
         </div>
         <div id="contents01">
             <div class="con01">
-                <div class="tit"></div>
                 <div class="notice">
+                    <div class="tit">
+                        <p>공지사항</p>
+                        <button><a href=""><span>바로가기</span></a> </button>
+                    </div>
                     <div class="list"></div>
-                    <div class="info"></div>
+                </div>
+                <div class="info">
+
                 </div>
             </div>
         </div>
         <div id="contents02">
-            <div class="con02"></div>
+            <div class="con02">
+                <div class="service">
+                    <div class="tit">
+                        <p>주요서비스</p>
+                    </div>
+                    <div class="link">
+                        <ul>1</ul>
+                        <ul>2</ul>
+                        <ul>3</ul>
+                        <ul>4</ul>
+                        <ul>5</ul>
+                        <ul>6</ul>
+                        <ul>7</ul>
+                    </div>
+                </div>
+            </div>
         </div>
         <div id="contents03">
             <div class="con03"></div>
