--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                 <div class="notice">
                     <div class="tit">
                         <p>공지사항</p>
-                        <button><a href=""><span>바로가기</span></a> </button>
+                        <button>
+                            <a href=""><span>바로가기</span></a>
+                        </button>
                     </div>
                     <div class="list"></div>
                 </div>
@@ -61,13 +63,34 @@
                         <p>주요서비스</p>
                     </div>
                     <div class="link">
-                        <ul>1</ul>
-                        <ul>2</ul>
-                        <ul>3</ul>
-                        <ul>4</ul>
-                        <ul>5</ul>
-                        <ul>6</ul>
-                        <ul>7</ul>
+                        <ul>
+                            <li><a href=""><img src="images/service_ico01.png" alt="aprt"></a></li>
+                            <li><span>우리단지</span></li>
+                        </ul>
+                        <ul>
+                            <li><a href=""><img src="images/service_ico02.png" alt="market"></a></li>
+                            <li><span>공유마켓</span></li>
+                        </ul>
+                        <ul>
+                            <li><a href=""><img src="images/service_ico03.png" alt="shop"></a></li>
+                            <li><span>알뜰쇼핑</span></li>
+                        </ul>
+                        <ul>
+                            <li><a href=""><img src="images/service_ico04.png" alt="rent_discount"></a></li>
+                            <li><span>임대료할인</span></li>
+                        </ul>
+                        <ul>
+                            <li><a href=""><img src="images/service_ico05.png" alt="rent_search"></a></li>
+                            <li><span>관리비ㆍ임대료조회</span></li>
+                        </ul>
+                        <ul>
+                            <li><a href=""><img src="images/service_ico06.png" alt="info"></a></li>
+                            <li><span>생활정보 제공</span></li>
+                        </ul>
+                        <ul>
+                            <li><a href=""><img src="images/service_ico07.png" alt="revice"></a></li>
+                            <li><span>하자접수</span></li>
+                        </ul>
                     </div>
                 </div>
             </div>
