--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                         </div>
                         <div class="list">
                             <ul>
-                                <li><a href="">[이벤트]내친구 런칭1주년 기념 돌잔치 이벤트(12.1~12.31)</a></li>
-                                <li><a href="">[공지] 서버 점검 완료 및 서비스 정상화 안내</a></li>
-                                <li><a href="">[공지]LH친구 가입하고 임대료 할인 받으세요!</a></li>                                   
+                                <li><a href="">[이벤트]내친구 런칭1주년 기념 돌잔치 이벤트121212dfdffdfdfdf12(12.1~12.31)</a><span>2019.12.31</span></li>
+                                <li><a href="">[공지] 서버 점검 완료 및 서비스 정상화 안내</a><span>2019.12.31</span></li>
+                                <li><a href="">[공지]LH친구 가입하고 임대료 할인 받으세요!</a><span>2019.12.31</span></li>                                   
                             </ul>
                         </div>
                     </div>
@@ -144,7 +144,7 @@
                                         <a href="/"><img src="images/market01.png" alt="market01"></a> 
                                     </li>
                                     <li class="copy">
-                                        <span>홍삼정 에브리데이 골드</span>
+                                        <span>[재능마켓] 통기타, 우쿨렐레 레슨합니다.</span>
                                     </li>
                                 </ul>
                                 <ul>
@@ -152,7 +152,7 @@
                                         <a href="/"><img src="images/market02.png" alt="market02"></a> 
                                     </li>
                                     <li class="copy">
-                                        <span>홍삼정 에브리데이 골드</span>
+                                        <span>[중고마켓] 보행기 팝니다.</span>
                                     </li>
                                 </ul>
                                 <ul>
@@ -160,7 +160,7 @@
                                         <a href="/"><img src="images/market03.png" alt="market03"></a> 
                                     </li>
                                     <li class="copy">
-                                        <span>홍삼정 에브리데이 골드</span>
+                                        <span>[공동구매] 입주민 청소모집</span>
                                     </li>
                                 </ul>
                             </div>
