--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <span>포인트</span>
                     </li>
                     <li class="quick_cart">
-                        <a href=""><img src="images/main_quick_cart.png" alt=""></a>
+                        <a href=""><img src="images/main_quick_cart0.png" alt=""></a>
                         <span>찜목록</span>
                     </li>
                     <li class="quick_top">
